feat: added all sse functionality

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -66,6 +66,19 @@ dependencies {
   // For > 0.71, this will be replaced by `com.facebook.react:react-android:$version` by react gradle plugin
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
+
+  implementation 'com.github.heremaps:oksse:0.9.0'
+
+  implementation 'androidx.annotation:annotation:1.6.0'
+
+  constraints {
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.20-RC") {
+      because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
+    }
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.20-RC") {
+      because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
+    }
+  }
 }
 
 if (isNewArchitectureEnabled()) {
